src/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$DefaultTracer() {
  this.indentLevel = 0;
}

peg$DefaultTracer.prototype.trace = function(event) {
  var that = this;

  function log(event) {
    function repeat(string, n) {
       var result = "", i;

       for (i = 0; i < n; i++) {
         result += string;
       }

       return result;
    }

    function pad(string, length) {
      return string + repeat(" ", length - string.length);
    }

    if (typeof console === "object") {
      console.log(
        event.location.start.line + ":" + event.location.start.column + "-"
          + event.location.end.line + ":" + event.location.end.column + " "
          + pad(event.type, 10) + " "
          + repeat("  ", that.indentLevel) + event.rule
      );
    }
  }

  switch (event.type) {
    case "rule.enter":
      log(event);
      this.indentLevel++;
      break;

    case "rule.match":
      this.indentLevel--;
      log(event);
      break;

    case "rule.fail":
      this.indentLevel--;
      log(event);
      break;

    default:
      throw new Error("Invalid event type: " + event.type + ".");
  }
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Root: peg$parseRoot },
      peg$startRuleFunction  = peg$parseRoot,

      peg$c0 = function(struct) {
          return struct.filter(item => item !== null);
        },
      peg$c1 = ";",
      peg$c2 = peg$literalExpectation(";", false),
      peg$c3 = function(f) {
          return f;
        },
      peg$c4 = function(name, vars) {
          return {
            type : "call",
            name : name,
            arguments: vars
          }
        },
      peg$c5 = "{",
      peg$c6 = peg$literalExpectation("{", false),
      peg$c7 = "}",
      peg$c8 = peg$literalExpectation("}", false),
      peg$c9 = function(vars) {
          var props = {};
          vars.forEach(item => {
            props[item.key] = item.value;
          })
          return props;
        },
      peg$c10 = ":=",
      peg$c11 = peg$literalExpectation(":=", false),
      peg$c12 = function(key, value) {
          return {
            key: key, value: value
          }
        },
      peg$c13 = peg$otherExpectation("structure"),
      peg$c14 = "->",
      peg$c15 = peg$literalExpectation("->", false),
      peg$c16 = function(name, vars) {
          var props = {};
          vars.forEach(item => {
            props[item.key] = item.value;
          })
          return {
            type : "struct",
            name : name,
            properties: props
          }
        },
      peg$c17 = peg$otherExpectation("property"),
      peg$c18 = "=",
      peg$c19 = peg$literalExpectation("=", false),
      peg$c20 = "(",
      peg$c21 = peg$literalExpectation("(", false),
      peg$c22 = ")",
      peg$c23 = peg$literalExpectation(")", false),
      peg$c24 = "=>",
      peg$c25 = peg$literalExpectation("=>", false),
      peg$c26 = function(args, script) {
          return {
            type : "ThymeFunc",
            args: args,
            body : script
          };
        },
      peg$c27 = function(vars) {
          var props = {};
          vars.forEach(item => {
            props[item.key] = item.value;
          })
          return {
            type : "ThymeObject",
            props : props
          }
        },
      peg$c28 = ",",
      peg$c29 = peg$literalExpectation(",", false),
      peg$c30 = function(v) {
          return v;
        },
      peg$c31 = function(v) {
          if(typeof v === "object" && v.type) return v;
          return {
            type: 'ThymeVar',
            varType : typeof v,
            value: v
          };
        },
      peg$c32 = ":",
      peg$c33 = peg$literalExpectation(":", false),
      peg$c34 = function(name, noLocal, v) {
        return {
          type: 'ThymeVarAssign',
          affectLocal: !noLocal,
          name: name,
          value: v,
        }
      },
      peg$c35 = function(name) {
          return {
            type: 'ThymeVarRef',
            name: name
          }
        },
      peg$c36 = function(b) {
          return {
            type: 'ThymeCodeBlock',
            body: b
          }
        },
      peg$c37 = function(body) {
          return  body.filter(i => i && i.type !== undefined)
        },
      peg$c38 = "?",
      peg$c39 = peg$literalExpectation("?", false),
      peg$c40 = function(test, t, e) {
         return {
           type: "ThymeTernary",
           test: test,
           then: t,
           else: e
         }
       },
      peg$c41 = "&&",
      peg$c42 = peg$literalExpectation("&&", false),
      peg$c43 = "||",
      peg$c44 = peg$literalExpectation("||", false),
      peg$c45 = function(head, tail) {
         if(!tail.length) return head;
         return {
           type: 'ThymeExpression',
           head: head,
           tail: tail.map(t => [t[1],t[3]])
         }
      },
      peg$c46 = ">=",
      peg$c47 = peg$literalExpectation(">=", false),
      peg$c48 = "<=",
      peg$c49 = peg$literalExpectation("<=", false),
      peg$c50 = ">",
      peg$c51 = peg$literalExpectation(">", false),
      peg$c52 = "<",
      peg$c53 = peg$literalExpectation("<", false),
      peg$c54 = "==",
      peg$c55 = peg$literalExpectation("==", false),
      peg$c56 = "!=",
      peg$c57 = peg$literalExpectation("!=", false),
      peg$c58 = "%",
      peg$c59 = peg$literalExpectation("%", false),
      peg$c60 = function(head, tail) {
        if(!tail.length) return head;
        return {
          type: 'ThymeExpression',
          head: head,
          tail: tail.map(t => [t[1],t[3]])
        }
      },
      peg$c61 = "+",
      peg$c62 = peg$literalExpectation("+", false),
      peg$c63 = "-",
      peg$c64 = peg$literalExpectation("-", false),
      peg$c65 = function(head, tail) {
           if(!tail.length) return head;
           return {
             type: 'ThymeExpression',
             head: head,
             tail: tail.map(t => [t[1],t[3]])
           }
         },
      peg$c66 = "*",
      peg$c67 = peg$literalExpectation("*", false),
      peg$c68 = "/",
      peg$c69 = peg$literalExpectation("/", false),
      peg$c70 = "&",
      peg$c71 = peg$literalExpectation("&", false),
      peg$c72 = "|",
      peg$c73 = peg$literalExpectation("|", false),
      peg$c74 = "^",
      peg$c75 = peg$literalExpectation("^", false),
      peg$c76 = function(head, tail) {
          if(!tail.length) return head;
          return {
            type: 'ThymeExpression',
            head: head,
            tail: tail.map(t => [t[1],t[3]])
          }
        },
      peg$c77 = "!",
      peg$c78 = peg$literalExpectation("!", false),
      peg$c79 = function(expr) {
          return {
            type: "ThymeNegate",
            head: expr
          }
        },
      peg$c80 = function(expr) { return expr },
      peg$c81 = function(arg) {
          return arg;
        },
      peg$c82 = function(args) {return args},
      peg$c83 = function(args) {return [[args]]},
      peg$c84 = function(name, args) {
          return {
            type: "ThymeCall",
            args: args,
            name: name
          };
        },
      peg$c85 = /^[+\-]/,
      peg$c86 = peg$classExpectation(["+", "-"], false, false),
      peg$c87 = "inf",
      peg$c88 = peg$literalExpectation("inf", false),
      peg$c89 = function(sign) {
          return Infinity*(sign == "-" ? -1 : 1);
        },
      peg$c90 = "NaN",
      peg$c91 = peg$literalExpectation("NaN", false),
      peg$c92 = function() {
         return NaN;
       },
      peg$c93 = "\"",
      peg$c94 = peg$literalExpectation("\"", false),
      peg$c95 = /^[^"]/,
      peg$c96 = peg$classExpectation(["\""], true, false),
      peg$c97 = function(txt) {
          return txt.join('');
        },
      peg$c98 = "true",
      peg$c99 = peg$literalExpectation("true", false),
      peg$c100 = "false",
      peg$c101 = peg$literalExpectation("false", false),
      peg$c102 = function(t) { return t === "true" },
      peg$c103 = /^[0-9.]/,
      peg$c104 = peg$classExpectation([["0", "9"], "."], false, false),
      peg$c105 = "e-",
      peg$c106 = peg$literalExpectation("e-", false),
      peg$c107 = /^[0-9]/,
      peg$c108 = peg$classExpectation([["0", "9"]], false, false),
      peg$c109 = function(sign, digits, err, err2) {
          var txt = "";
          if(sign) txt += "-";
          if(digits) txt += digits.join("");
          if(err) txt += "e-"+err2.join("");
          return txt;
        },
      peg$c110 = function(txt) {
          return parseFloat(txt);
        },
      peg$c111 = function(v) {
        return v;
      },
      peg$c112 = "[",
      peg$c113 = peg$literalExpectation("[", false),
      peg$c114 = "]",
      peg$c115 = peg$literalExpectation("]", false),
      peg$c116 = function(vars) {

          var objToArr = function(obj){
            if(obj instanceof Array) return obj.map(objToArr);
            if(typeof obj == "object"){
              if(obj.type == "ThymeArray") return obj.items.map(objToArr)
              if(obj.type == "ThymeVar") return obj.value;
            }
            return obj;
          }

          return objToArr(vars);
        },
      peg$c117 = function(vars) {
          return {
            type: "ThymeArray",
            items: vars
          }
        },
      peg$c118 = function(name) {
          return name
        },
      peg$c119 = /^[a-zA-Z0-9_]/,
      peg$c120 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c121 = function(name) {
          return name.join("");
        },
      peg$c122 = peg$otherExpectation("comment"),
      peg$c123 = "//",
      peg$c124 = peg$literalExpectation("//", false),
      peg$c125 = function(txt) {
         return {
           type: 'comment',
           text: txt
         }
       },
      peg$c126 = peg$otherExpectation("textline"),
      peg$c127 = /^[^\n]/,
      peg$c128 = peg$classExpectation(["\n"], true, false),
      peg$c129 = function(text, eol) {
          return text.join('');
        },
      peg$c130 = /^[a-z]/i,
      peg$c131 = peg$classExpectation([["a", "z"]], false, true),
      peg$c132 = /^[a-z_0-9.]/i,
      peg$c133 = peg$classExpectation([["a", "z"], "_", ["0", "9"], "."], false, true),
      peg$c134 = function(w) {
          w = w.map(s=>{
            if(s instanceof Array) return s.join("");
            return s;
          })
          return w.join("");
        },
      peg$c135 = "\n",
      peg$c136 = peg$literalExpectation("\n", false),
      peg$c137 = peg$otherExpectation("whitespace"),
      peg$c138 = /^[ \t\r\n]/,
      peg$c139 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
      peg$c140 = function() {
          return null;
        },
      peg$c141 = peg$otherExpectation("UTFBOM"),
      peg$c142 = "\uFEFF",
      peg$c143 = peg$literalExpectation("\uFEFF", false),
      peg$c144 = function() {
          return null
        },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$tracer = "tracer" in options ? options.tracer : new peg$DefaultTracer(),

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseRoot() {
    var s0, s1, s2,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Root",
      location: peg$computeLocation(startPos, startPos)
    });

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseRootThymeFunc();
    if (s2 === peg$FAILED) {
      s2 = peg$parseStruct();
      if (s2 === peg$FAILED) {
        s2 = peg$parseCall();
        if (s2 === peg$FAILED) {
          s2 = peg$parseComment();
          if (s2 === peg$FAILED) {
            s2 = peg$parseWS();
            if (s2 === peg$FAILED) {
              s2 = peg$parseUTFBOM();
            }
          }
        }
      }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseRootThymeFunc();
      if (s2 === peg$FAILED) {
        s2 = peg$parseStruct();
        if (s2 === peg$FAILED) {
          s2 = peg$parseCall();
          if (s2 === peg$FAILED) {
            s2 = peg$parseComment();
            if (s2 === peg$FAILED) {
              s2 = peg$parseWS();
              if (s2 === peg$FAILED) {
                s2 = peg$parseUTFBOM();
              }
            }
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Root",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Root",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseRootThymeFunc() {
    var s0, s1, s2,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "RootThymeFunc",
      location: peg$computeLocation(startPos, startPos)
    });

    s0 = peg$currPos;
    s1 = peg$parseThymeFunc();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 59) {
        s2 = peg$c1;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "RootThymeFunc",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "RootThymeFunc",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseCall() {
    var s0, s1, s2, s3, s4, s5, s6,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Call",
      location: peg$computeLocation(startPos, startPos)
    });

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseStructName();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCallStruct();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 59) {
              s5 = peg$c1;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c2); }
            }
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c4(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Call",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Call",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseCallStruct() {
    var s0, s1, s2, s3, s4, s5,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "CallStruct",
      location: peg$computeLocation(startPos, startPos)
    });

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c5;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseCallParam();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseCallParam();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 125) {
              s5 = peg$c7;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c9(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "CallStruct",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "CallStruct",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseCallParam() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "CallParam",
      location: peg$computeLocation(startPos, startPos)
    });

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseVarName();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c10) {
            s4 = peg$c10;
            peg$currPos += 2;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c11); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseStructVariableTypes();
              if (s6 !== peg$FAILED) {
                s7 = peg$parse_();
                if (s7 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 59) {
                    s8 = peg$c1;
                    peg$currPos++;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c2); }
                  }
                  if (s8 === peg$FAILED) {
                    s8 = null;
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parse_();
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c12(s2, s6);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "CallParam",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "CallParam",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }
